<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/imagemars7"
    tools:context="com.example.admin.marsguide.Main7Activity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="More information links:"
            android:textSize="40dp"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            />

        <TextView
            android:text="@string/hyperlink1"
            android:id="@+id/hyperlink1"
            android:autoLink="web"
            android:textSize="15dp"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            />

        <TextView
            android:text="@string/hyperlink2"
            android:id="@+id/hyperlink2"
            android:autoLink="web"
            android:textSize="15dp"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            />

        <TextView
            android:text="@string/hyperlink3"
            android:id="@+id/hyperlink3"
            android:autoLink="web"
            android:textSize="15dp"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            />

        <TextView
            android:text="@string/hyperlink4"
            android:id="@+id/hyperlink4"
            android:autoLink="web"
            android:textSize="15dp"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            />

        <TextView
            android:text="@string/hyperlink5"
            android:id="@+id/hyperlink5"
            android:autoLink="web"
            android:textSize="15dp"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            />

    </LinearLayout>

    <ImageButton
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/imageButton"
        android:background="@drawable/imagebutton2"
        android:onClick="sendMessage2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/imageButton2"
        android:background="@drawable/imagebutton1"
        android:onClick="sendMessage1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>

